force-app/main/default/objects/Email_activity__c/Email_activity__c.object-meta.xml
<CustomObject>
    <label>Email Activity</label>
    <nameField>
        <displayFormat>EA-{0000000}</displayFormat>
        <label>Email Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>