force-app/main/default/objects/Email_activity__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>Change_Request__c</referenceTo>
    <relationshipLabel>Email activities</relationshipLabel>
    <relationshipName>Email_activities</relationshipName>
    <type>Lookup</type>
</CustomField>