force-app/main/default/objects/Email_activity__c/fields/Email_sent__c.field-meta.xml
<CustomField>
    <fullName>Email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email sent</label>
    <type>Checkbox</type>
</CustomField>