force-app/main/default/objects/Email_activity__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Email activities</relationshipLabel>
    <relationshipName>Email_activities</relationshipName>
    <type>Lookup</type>
</CustomField>