force-app/main/default/objects/Email_activity__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Participation</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipName>Email_activities</relationshipName>
    <type>Lookup</type>
</CustomField>