force-app/main/default/objects/Email_activity__c/fields/Event_Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Registration Group</label>
    <referenceTo>Event_Registration_Group__c</referenceTo>
    <relationshipName>Email_activities</relationshipName>
    <type>Lookup</type>
</CustomField>