force-app/main/default/objects/Email_activity__c/fields/JSON_body__c.field-meta.xml
<CustomField>
    <fullName>JSON_body__c</fullName>
    <label>JSON body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>