force-app/main/default/objects/Email_activity__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used In &apos;Membership Renewal&apos; Process</description>
    <label>Membership Status</label>
    <referenceTo>MembershipContactAssotiation__c</referenceTo>
    <relationshipLabel>Email Activities</relationshipLabel>
    <relationshipName>Email_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>