force-app/main/default/objects/Email_activity__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Email Activities</relationshipLabel>
    <relationshipName>Email_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>