force-app/main/default/objects/Email_activity__c/fields/Send_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Email__c</fullName>
    <label>Send To Email</label>
    <type>Email</type>
</CustomField>