force-app/main/default/objects/Email_activity__c/fields/TransferFromContact__c.field-meta.xml
<CustomField>
    <fullName>TransferFromContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransferFromContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email activities (Contact)</relationshipLabel>
    <relationshipName>Email_activities1</relationshipName>
    <type>Lookup</type>
</CustomField>