force-app/main/default/objects/Email_activity__c/fields/TransferFromEmail__c.field-meta.xml
<CustomField>
    <fullName>TransferFromEmail__c</fullName>
    <label>TransferFromEmail</label>
    <type>Email</type>
</CustomField>