force-app/main/default/objects/Email_activity__c/fields/TransferToContact__c.field-meta.xml
<CustomField>
    <fullName>TransferToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TransferToContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email activities (TransferToContact)</relationshipLabel>
    <relationshipName>Email_activities2</relationshipName>
    <type>Lookup</type>
</CustomField>