force-app/main/default/objects/Email_activity__c/fields/TransferToEmail__c.field-meta.xml
<CustomField>
    <fullName>TransferToEmail__c</fullName>
    <label>TransferToEmail</label>
    <type>Email</type>
</CustomField>