force-app/main/default/objects/Email_activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Sent__c</columns>
    <columns>Type__c</columns>
    <columns>Change_Request__c</columns>
    <columns>Send_To_Email__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>